--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   change_app_package_name: ^1.1.0
   firebase_core: ^2.20.0
+  firebase_auth: ^4.12.0
+  fluttertoast: ^8.2.2
+  flutter_local_notifications: ^16.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
