--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_local_notifications: ^16.1.0
   carousel_slider: ^4.2.1
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  gap: ^3.0.1
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -80,17 +85,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:   
+    - family: Nunito Sans
+      fonts:
+        - asset: fonts/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf        
+          weight: 700
+    - family: Heebo
+      fonts:
+        - asset: fonts/Heebo-VariableFont_wght.ttf        
+          weight: 700
+    - family: Nunito
+      fonts:
+        - asset: fonts/Nunito-VariableFont_wght.ttf        
+          weight: 700
+  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
