--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   firebase_auth: ^4.12.0
   fluttertoast: ^8.2.2
   flutter_local_notifications: ^16.1.0
-  carousel_slider: ^4.2.1
-  equatable: ^2.0.5
-  flutter_bloc: ^8.1.3
-  gap: ^3.0.1
-  loading_indicator: ^3.1.1
+  equatable: ^2.0.5  
+  flutter_animate: ^4.4.0  
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  flutter_image_compress: ^2.1.0
+  firebase_storage: ^11.6.0
+  image_crop: ^0.4.1
 
 dev_dependencies:
   flutter_test:
@@ -97,6 +99,10 @@ flutter:
     - family: Nunito
       fonts:
         - asset: fonts/Nunito-VariableFont_wght.ttf        
+          weight: 700
+    - family: Jost
+      fonts:
+        - asset: fonts/Jost-VariableFont_wght.ttf        
           weight: 700
   
   # For details regarding fonts from package dependencies,
