--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nextstep.project_one">
+    package="com.projectOne.app">
    <application
         android:label="project_one"
         android:name="${applicationName}"
