--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:368915940267:ios:92c97f4b359ab660c7c8ee",
-  "FIREBASE_PROJECT_ID": "projectone-1d20e",
-  "GCM_SENDER_ID": "368915940267"
+  "GOOGLE_APP_ID": "1:972687008586:ios:63ab4b29acb7e09aeb97b3",
+  "FIREBASE_PROJECT_ID": "projectone-86cbb",
+  "GCM_SENDER_ID": "972687008586"
 }
