--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_image_compress: ^2.1.0
   firebase_storage: ^11.6.0
   image_crop: ^0.4.1
+  scan: ^1.6.0
+  firebase_database: ^10.4.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
