--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   scan: ^1.6.0
   firebase_database: ^10.4.0
   cloud_firestore: ^4.14.0
+  http: ^0.13.6
+  gallery_saver_plus: ^3.0.1
+  dio: ^5.4.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
